# visual-inspection-template

./: README.md
app/: .env  .env.development  .env.local.sample  .env.test  .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json  tsconfig.json
app/components/elements/: ChartBar.tsx  FlexCard.tsx  LinkItem.tsx  Title.tsx
app/components/layouts/: Copyright.tsx  DrawerUI.tsx  Layout.tsx  LinkItems.tsx  SnackbarFeedback.tsx
app/components/modules/: UploadButton.tsx
app/components/templates/: DevView.tsx  DevViewOld.tsx  OkNgRatio.tsx  (+6 more)
app/contexts/: SnackbarContext.tsx
app/db/: firestore.indexes.json  storage.rules
app/functions/: .env  .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json
app/lib/: firebase.ts  theme.ts
app/pages/: _app.tsx  _document.tsx  barLight.tsx  converted.tsx  dev.tsx  domeLight.tsx  index.tsx  original.tsx  retrainAI.tsx  settings.tsx  vertexAiDatasets.tsx
app/src/: Link.tsx  ProTip.tsx
app/types/: chart.ts  firebase.ts  image.ts  index.ts  metrics.ts  model.ts
app/utils/: env.tsx
docs/: README.md
edge/backend/: .gitignore  README.md  pyproject.toml
edge/backend/backend/: config.py  main.py
edge/backend/static/: index.html
edge/backend/static/assets/: index-b095ed71.js  index-c4249e60.js
edge/frontend/: package-lock.json
edge/frontend-pre/: README.md  package.json
edge/ml/: .gitignore  README.md  test_request.py
edge/visual-inspection/ml/: Dockerfile  pyproject.toml
edge/visual-inspection/ml/ml/: app.py  pred_tf_saved_model.py  pred_tflite.py
edge/visual-inspection/ml/models/original/: model.tflite
infra/: README.md
ml/: .gitignore  pyproject.toml
ml/ml/: make_importfile.py
ml/ml-python/: README.md  pyproject.toml
ml/ml-python/ml/: main.py  utils.py
ml/mlops/: augmentation.py  config.py  gcs.py  main.py  make_importfile.py
(+29 files in other folders)
