[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["msrks <mshrrks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
firebase-admin = "^6.1.0"
google-cloud-storage = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22"
types-protobuf = "^4.22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.main:mainTask"
